  (Dale Anson)

- Fix for tracker 846913, jsp syntax highlighting for single line comments.
  (Dale Anson)

- Updated css mode with new css 3 properties and values, tracker 3483390.
  (Dale Anson)

- Updated html mode to recognize new html 5 keywords, updated jsp mode to
  delegate to html mode for html tags. (Dale Anson)

}}}
{{{ UI

- File System Browser docked on left by default. (Alan Ezust)

- Suppressed output to standard error of encoding problems on opening
  files, which affects also hypersearch encoding errors. These errors are
  now displayed in a dialog, but not sent to error output.
  (request #3517116 Jarek Czekalski)  

- Reserve space for 4 digit in memory's status bar widget.
  (patch #3518422 Makarius)

- The Windows installer and windows integration are now localized in french
  (patch #3513215 Jojaba)

- The Error status bar widget now use a JEditEmbeddedTextArea instead of a
  simple swing TextArea to display exceptions (Matthieu Casanova)

- jEdit now supports localization. (Matthieu Casanova)

- Added french translation (Jojaba http://jojaba.free.fr)

- Added german translation (Robert Schwenn)

- Added czech translation (patch #3523511 Milan Černil)

- Text Area option for Search System Fonts in Font substitution
  (#3479585 Max Funk)

- Dialog titles in file system browser
  (patch #2968930, request #2807301 SPennington)

- Standarized Buffer Switcher combo (#3408584, patch #3456572 Jarek Czekalski)

- If a Task is not cancellable, the cancel button of TaskMonitor is disabled
  (Matthieu Casanova)

- Added Icons to the VFS Browser context menu (Matthieu Casanova)

- Combined Global and Plugin options into a single pane, making Optional plugin
	obsolete, fixing auto resize dialog issue.
	(#3449498, request #3455602 Alan Ezust)

- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)

- Fixed keyboard handling of comboboxes in jedit's option panes.
  (#3415064 Alan Ezust)
